# ALVA

./: .gitignore  LICENSE.txt  README.md  README.rst  requirements.txt  setup.cfg
examples/: alva_example.ipynb  convergence_training.ipynb  pipeline_example.ipynb
examples/config/: alva_example_config.yaml  convergence_config.yaml  generator_hparams_config.yaml  mnist_data.yaml  training_config.yaml
examples/data/: __init__.py  mnist.py  perturbated_mnist_dataset.py
examples/models/: __init__.py  conditional_gan.py  lenet5.pth  lenet5.py
examples/models/state_dicts/: lenet5.pt
examples/training/: __init__.py  early_stopping.py  train.py  validate.py
examples/utils/: __init__.py  helper_functions.py
src/: alva.py  convergence_training.py  fgsm.py  generative_model_base.py  gradients.py  pipeline.py  utils.py
