[metadata]
name = alva
version = 0.0.1
license = MIT
description = Adversarial latent vector adjustment (alva) is used to generate new data samples with combination of a generative newtork and a classifier
long_description = file: README.rst
author = Sebastian Baum
# author_email = <Optional: author e-mail>
classifiers=
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
[options.packages.find]
where=src